Added register layout and data validation.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".user_profile.Login"
-    android:layout_margin="70dp"
     android:gravity="center">
-
-        <RelativeLayout
-            android:id="@+id/relativeLayout1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/editTextUsername"
@@ -52,6 +46,4 @@
                 android:textColor="#878383"
                 app:backgroundTint="#FFFFFF" />
 
-        </RelativeLayout>
-
-</LinearLayout>
+</RelativeLayout>
