--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,4 +46,13 @@
                 android:textColor="#878383"
                 app:backgroundTint="#FFFFFF" />
 
+            <Button
+                android:id="@+id/buttonPasswordReset"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/buttonRedirectToRegister"
+                android:text="@string/forgot_your_password"
+                android:textColor="#878383"
+                app:backgroundTint="#FFFFFF" />
+
 </RelativeLayout>
