--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -14,11 +14,12 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imageButtonProfile"
         android:layout_width="78dp"
         android:layout_height="83dp"
-        tools:srcCompat="@tools:sample/avatars"
+        android:clickable="true"
+        android:src="@drawable/googleg_standard_color_18"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true" />
 
