--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -14,47 +14,82 @@
         android:clickable="true"
         android:src="@drawable/googleg_standard_color_18" />
 
-    <TextView
-        android:id="@+id/textViewFirstName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:layout_below="@+id/imageButtonProfileInfo"/>
+    <ImageView
+        android:id="@+id/imageButtonEditInfo"
+        android:layout_width="78dp"
+        android:layout_height="83dp"
+        android:clickable="true"
+        android:layout_below="@+id/imageButtonProfileInfo"
+        android:src="@drawable/edit" />
 
-    <TextView
-        android:id="@+id/textViewLastName"
+    <RelativeLayout
+        android:id="@+id/relativeLayoutEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        android:layout_below="@+id/textViewFirstName"/>
+        android:layout_below="@+id/imageButtonEditInfo">
 
-    <TextView
-        android:id="@+id/textViewEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:layout_below="@+id/textViewLastName"/>
+        <TextView
+            android:id="@+id/textViewFirstName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="" />
+
+        <EditText
+            android:id="@+id/editTextFirstName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="" />
+
+        <TextView
+            android:id="@+id/textViewLastName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:layout_below="@+id/textViewFirstName"/>
+
+        <EditText
+            android:id="@+id/editTextLastName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:layout_below="@+id/editTextFirstName"/>
+
+        <TextView
+            android:id="@+id/textViewEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:layout_below="@+id/textViewLastName"/>
+
+        <EditText
+            android:id="@+id/editTextEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:layout_below="@+id/editTextLastName"/>
+
+        <Button
+            android:id="@+id/buttonSaveEdited"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/save"
+            android:layout_below="@id/editTextEmail"/>
+
+    </RelativeLayout>
 
     <Button
         android:id="@+id/buttonChangePassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/change_password"
-        android:layout_below="@id/textViewEmail"/>
-
-    <Button
-        android:id="@+id/buttonChangeEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/change_email"
-        android:layout_below="@id/buttonChangePassword"/>
+        android:layout_below="@id/relativeLayoutEdit"/>
 
     <Button
         android:id="@+id/buttonDeleteAccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/delete_account"
-        android:layout_below="@id/buttonChangeEmail"/>
+        android:layout_below="@id/buttonChangePassword"/>
 
     <Button
         android:id="@+id/buttonSignOut"
