--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".user_profile.PasswordReset"
-    android:gravity="center">
+    android:gravity="center"
+    android:padding="70dp">
 
     <EditText
         android:id="@+id/inputEmail"
