--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,23 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".user_profile.Register"
-    android:gravity="center">
+    android:gravity="center"
+    android:padding="70dp">
 
         <EditText
             android:id="@+id/editTextFirstName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:inputType="textPersonName"
             android:hint="@string/first_name"
             android:autofillHints="@string/first_name"/>
 
         <EditText
             android:id="@+id/editTextLastName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:ems="10"
             android:inputType="textPersonName"
             android:hint="@string/last_name"
             android:autofillHints="@string/last_name"
@@ -29,10 +27,8 @@
 
         <EditText
             android:id="@+id/editTextEmail"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:ems="10"
             android:inputType="textPersonName"
             android:hint="@string/e_mail"
             android:autofillHints="@string/e_mail"
@@ -40,22 +36,18 @@
 
         <EditText
             android:id="@+id/editTextPassword"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/editTextEmail"
-            android:layout_marginTop="20dp"
-            android:ems="10"
             android:inputType="textPassword"
             android:hint="@string/password"
             android:autofillHints="@string/password"/>
 
         <EditText
             android:id="@+id/editTextPassword2"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/editTextPassword"
-            android:layout_marginTop="20dp"
-            android:ems="10"
             android:inputType="textPassword"
             android:hint="@string/password"
             android:autofillHints="@string/password"/>
@@ -66,13 +58,12 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/editTextPassword2"
             android:layout_alignEnd="@+id/editTextPassword2"
-            android:layout_marginTop="20dp"
             android:text="@string/register"
             android:layout_alignRight="@+id/editTextPassword2" />
 
         <Button
             android:id="@+id/buttonRedirectToLogin"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/buttonConfirm"
             android:text="@string/already_a_member_sign_in"
