--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".user_profile.Settings"
-    android:gravity="center">
+    android:gravity="center"
+    android:padding="70dp">
 
     <ImageView
         android:id="@+id/imageButtonProfileInfo"
@@ -16,64 +17,71 @@
 
     <ImageView
         android:id="@+id/imageButtonEditInfo"
-        android:layout_width="78dp"
+        android:layout_width="20dp"
         android:layout_height="83dp"
         android:clickable="true"
         android:layout_below="@+id/imageButtonProfileInfo"
-        android:src="@drawable/edit" />
+        android:src="@drawable/edit"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        />
 
     <RelativeLayout
         android:id="@+id/relativeLayoutEdit"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageButtonEditInfo">
 
         <TextView
-            android:id="@+id/textViewFirstName"
-            android:layout_width="wrap_content"
+            android:id="@+id/textViewEmail"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="" />
+            android:text=""
+            android:textSize="20dp" />
 
         <EditText
-            android:id="@+id/editTextFirstName"
-            android:layout_width="wrap_content"
+            android:id="@+id/editTextEmail"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="" />
 
         <TextView
-            android:id="@+id/textViewLastName"
-            android:layout_width="wrap_content"
+            android:id="@+id/textViewFirstName"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
+            android:textSize="20dp"
+            android:layout_below="@+id/textViewEmail"/>
+
+        <EditText
+            android:id="@+id/editTextFirstName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:layout_below="@+id/editTextEmail"/>
+
+        <TextView
+            android:id="@+id/textViewLastName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="20dp"
             android:layout_below="@+id/textViewFirstName"/>
 
         <EditText
             android:id="@+id/editTextLastName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
             android:layout_below="@+id/editTextFirstName"/>
 
-        <TextView
-            android:id="@+id/textViewEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:layout_below="@+id/textViewLastName"/>
-
-        <EditText
-            android:id="@+id/editTextEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:layout_below="@+id/editTextLastName"/>
-
         <Button
             android:id="@+id/buttonSaveEdited"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/save"
-            android:layout_below="@id/editTextEmail"/>
+            android:layout_below="@id/editTextLastName"/>
 
     </RelativeLayout>
 
