Added back button in action bar

--- a/app/src/main/res/layout/activity_change_profile_picture.xml
+++ b/app/src/main/res/layout/activity_change_profile_picture.xml
@@ -18,8 +18,7 @@
         <ImageView
             android:id="@+id/imageProfilePicture"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/googleg_standard_color_18" />
+            android:layout_height="match_parent" />
 
     </RelativeLayout>
 
