--- a/app/src/main/res/layout/activity_change_profile_picture.xml
+++ b/app/src/main/res/layout/activity_change_profile_picture.xml
@@ -34,5 +34,11 @@
         android:layout_height="wrap_content"
         android:text="@string/save_picture" />
 
+    <Button
+        android:id="@+id/buttonDeletePicture"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete picture" />
+
 
 </LinearLayout>
