--- a/app/src/main/res/layout/activity_change_profile_picture.xml
+++ b/app/src/main/res/layout/activity_change_profile_picture.xml
@@ -18,7 +18,8 @@
         <ImageView
             android:id="@+id/imageProfilePicture"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:foreground="@drawable/rounded_frame"/>
 
     </RelativeLayout>
 
