--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -38,6 +38,7 @@
             android:id="@+id/buttonNewPicturebook"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:text="@string/newSlikovnica"
             android:layout_below="@+id/buttonNewPage"/>
 
