--- a/app/src/main/res/layout/activity_new_page.xml
+++ b/app/src/main/res/layout/activity_new_page.xml
@@ -25,12 +25,12 @@ tools:context=".editpage.NewPage">
         android:background="@color/colorPrimary"
         android:orientation="horizontal">
 
-        <ImageButton
+        <!--<ImageButton
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
             android:src="@drawable/ic_baseline_arrow_back_24"
-            android:onClick="finishPaint"/>
+            android:onClick="finishPaint"/>-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,7 +39,7 @@ tools:context=".editpage.NewPage">
             android:gravity="right"
             android:layout_weight="1">
 
-            <ImageButton
+            <!--<ImageButton
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:background="@color/colorPrimary"
@@ -51,14 +51,15 @@ tools:context=".editpage.NewPage">
                 android:layout_height="match_parent"
                 android:background="@color/colorPrimary"
                 android:src="@drawable/ic_baseline_home_24"
-                android:onClick="showFiles"/>
+                android:onClick="showFiles"/>-->
 
             <ImageButton
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:background="@color/colorPrimary"
-                android:src="@drawable/ic_baseline_cloud_download_24"
-                android:onClick="saveFile"/>
+                android:src="@drawable/save"
+                android:onClick="saveFile"
+                android:layout_marginRight="20dp"/>
 
         </LinearLayout>
 
