--- a/app/src/main/res/layout/edit_pages_row_item.xml
+++ b/app/src/main/res/layout/edit_pages_row_item.xml
@@ -26,7 +26,7 @@
                 android:layout_alignParentTop="true"/>
 
             <EditText
-                android:id="@+id/editTextDetails"
+                android:id="@+id/editTextCaption"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/imageViewSinglePage"/>
@@ -39,10 +39,10 @@
                 android:textAllCaps="true"
                 android:textColor="@color/black"
                 android:textSize="20dp"
-                android:layout_below="@+id/editTextDetails"/>
+                android:layout_below="@+id/editTextCaption"/>
 
             <RadioGroup
-                android:id="@+id/radioGroup"
+                android:id="@+id/radioGroupPages"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textViewPageNumber"
@@ -53,16 +53,30 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="1"/>
+
                 <RadioButton
                     android:id="@+id/radio_button_2"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="2"/>
+
                 <RadioButton
                     android:id="@+id/radio_button_3"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="3"/>
+
+                <RadioButton
+                    android:id="@+id/radio_button_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="4"/>
+
+                <RadioButton
+                    android:id="@+id/radio_button_5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="5"/>
 
             </RadioGroup>
 
