--- a/app/src/main/res/layout/activity_new_page.xml
+++ b/app/src/main/res/layout/activity_new_page.xml
@@ -31,7 +31,22 @@ tools:context=".editpage.NewPage">
             android:background="@color/colorPrimary"
             android:src="@drawable/ic_baseline_arrow_back_24"
             android:onClick="finishPaint"/>-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="left"
+            android:layout_weight="1">
 
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary"
+                android:src="@drawable/newbutton"
+                android:onClick="newFile"
+                android:layout_marginLeft="20dp"/>
+
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
