Added functionality for taking profile picture with camera

--- a/app/src/main/res/layout/activity_change_profile_picture.xml
+++ b/app/src/main/res/layout/activity_change_profile_picture.xml
@@ -24,6 +24,12 @@
     </RelativeLayout>
 
     <Button
+        android:id="@+id/buttonTakePicture"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/take_picture" />
+
+    <Button
         android:id="@+id/buttonChoosePicture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
