--- a/app/src/main/res/layout/edit_pages_row_item.xml
+++ b/app/src/main/res/layout/edit_pages_row_item.xml
@@ -90,6 +90,18 @@
                     android:layout_height="match_parent"
                     android:text="5"/>
 
+                <RadioButton
+                    android:id="@+id/radio_button_6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="6"/>
+
+                <RadioButton
+                    android:id="@+id/radio_button_7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="7"/>
+
             </RadioGroup>
 
 
